--- a/index.html
+++ b/index.html
@@ -8,23 +8,12 @@
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
-    <h1>hello world</h1>
-    <main class="container">
-        <h2>Lorem, ipsum dolor.</h2>
-        <div class="box"></div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui nam
-        officia fuga cupiditate molestias quae alias debitis assumenda nemo
-        necessitatibus eius minima vel voluptate sunt repellendus, hic itaque
-        consectetur eos quas neque quidem voluptates quisquam a. Ex voluptatem
-        molestiae cumque, reiciendis, blanditiis aliquid, aperiam fuga ipsam
-        facilis recusandae consequuntur ab quisquam illum incidunt maiores
-        similique? Vero animi provident nesciunt libero similique deserunt
-        assumenda error, eligendi minus aliquid quo mollitia ut cumque hic!
-        Nulla voluptates in beatae consequuntur delectus fugiat quae temporibus
-        ea maiores dolor eos cumque perspiciatis labore nemo rem obcaecati,
-        ipsam ab voluptatem deleniti exercitationem dolores minus. Tempora, qui.
-      </p>
-    </main>
+    <!-- <h1>hello world</h1> -->
+    <!-- <main class="container"> -->
+      <!-- <div class="background"></div> -->
+       <div class="gradient">
+     
+       </div>
+    <!-- </main> -->
   </body>
 </html>
