image and figure and caption

--- a/index.html
+++ b/index.html
@@ -11,30 +11,17 @@
     <header></header>
     <h1>hello world</h1>
     <main class="container">
-        <!-- <img src="https://picsum.photos/id/1050/400/300" alt="photo of a cliff and ocean and rocks"> -->
-         <!-- .row>.col.col-3*4>(img[src="https://picsum.photos/id/105$/500"])+(h3>lorem3)+p>lorem -->
-         <div class="row">
-            <div class="col col-3">
-                <img src="https://picsum.photos/id/1051/800/400" alt="">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit laboriosam officia ipsam beatae voluptatibus, fugit repudiandae. Optio fugiat vel natus voluptas sint corporis nostrum. Aperiam fugit voluptatum quisquam aut sit!</p>
-            </div>
-            <div class="col col-3">
-                <img src="https://picsum.photos/id/1052/600/500" alt="">
-                <h3>Quisquam, repudiandae. Vero?</h3>
-                <p>Facere eos maxime aliquam reiciendis modi eum sit laudantium hic ratione ut, libero dolor sunt pariatur, in eius quis animi voluptate! Ipsum alias quam non doloribus eveniet? Vel, veritatis eos.</p>
-            </div>
-            <div class="col col-3">
-                <img src="https://picsum.photos/id/1053/300/400" alt="">
-                <h3>Itaque, in saepe?</h3>
-                <p>Corporis labore iusto deleniti officia tenetur. Libero nesciunt nisi doloribus eum quam saepe nam earum voluptatem quidem quis provident illum reprehenderit eius error quasi, similique nulla eveniet esse nostrum soluta.</p>
-            </div>
-            <div class="col col-3">
-                <img src="https://picsum.photos/id/1054/500/200" alt="">
-                <h3>Rem, repellendus laudantium?</h3>
-                <p>Esse veniam tempore error soluta eos illum ad voluptas vel corrupti vero dolore iusto veritatis, necessitatibus qui tempora commodi excepturi et. Nobis mollitia sit aperiam nemo adipisci, pariatur assumenda temporibus?</p>
-            </div>
-         </div>
+      <figure>
+        <img
+          src="https://picsum.photos/id/1055/500"
+          alt="photo of a beach and sand" />
+        <figcaption>learn swimming in ocean</figcaption>
+      </figure>
+
+      <section>
+        <div class="🍊"></div>
+        <p>learn swimming in ocean</p>
+      </section>
     </main>
   </body>
 </html>
