--- a/index.html
+++ b/index.html
@@ -11,17 +11,79 @@
     <header></header>
     <h1>hello world</h1>
     <main class="container">
-      <figure>
+      <svg width="400" height="400" xmlns="http://www.w3.org/2000/svg">
+        <!-- <rect
+          rx="10"
+          ry="10"
+          x="100"
+          y="100"
+          width="100"
+          height="100"
+          stroke="#f11"
+          fill="#f99"
+          stroke-width="15" /> -->
+
+        <!-- <circle
+          cx="200"
+          cy="200"
+          r="140"
+          stroke="pink"
+          fill="green"
+          stroke-width="5" /> -->
+
+        <!-- <ellipse
+          cx="75"
+          cy="75"
+          rx="20"
+          ry="5"
+          stroke="red"
+          fill="transparent"
+          stroke-width="5" /> -->
+
+        <line
+          x1="10"
+          x2="350"
+          y1="10"
+          y2="350"
+          stroke="orange"
+          stroke-width="20" />
+
+        <!-- <polyline
+          points="60 110 65 120 70 115 75 130 80 125 85 140 90 135 95 150 100 145"
+          stroke="orange"
+          fill="transparent"
+          stroke-width="5" /> -->
+
+        <!-- <polygon
+          points="50 160 55 180 70 180 60 190 65 205 50 195 35 205 40 190 30 180 45 180"
+          stroke="green"
+          fill="transparent"
+          stroke-width="5" /> -->
+
+        <!-- <path
+          d="M20,230 Q40,205 50,230 T90,230"
+          fill="none"
+          stroke="blue"
+          stroke-width="5" /> -->
+      </svg>
+
+      <!-- raster images and vector base images -->
+      <!-- .png .jpg vs svg -->
+      <!-- <figure>
         <img
-          src="https://picsum.photos/id/1055/500"
+          src="./assets/images/image-1.png"
           alt="photo of a beach and sand" />
         <figcaption>learn swimming in ocean</figcaption>
       </figure>
 
+      <svg>
+
+      </svg>
+
       <section>
         <div class="🍊"></div>
         <p>learn swimming in ocean</p>
-      </section>
+      </section> -->
     </main>
   </body>
 </html>
