--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<!-- root is like an alias to <html> -->
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/main.css" />
-  </head>
-  <body>
-    <header></header>
-    <h1>hello world</h1>
-    <main class="container">
-        <!-- <audio src="./assets/media/bensound-ukulele.mp3" controls></audio> -->
-         <!-- <video loop autoplay preload="auto" muted poster="./assets/images/image-1.png" width="700" src="./assets/media/video.mp4" controls></video> -->
-         <video loop autoplay preload="auto" muted width="700" src="./assets/media/video.mp4" ></video>
-         <!-- inline frame or iframe -->
-    </main>
-  </body>
+    <!--THIS IS WRONG <link rel="stylesheet" href="./styles.scss"> -->
+    <!-- <link rel="stylesheet" href="'https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'"> -->
+    <link rel="stylesheet" href="./assets/css/main.min.css">
+ 
+</head>
+<body>
+    <h1>hello sass</h1>
+    <section class="parent">
+        <figure class="photo">
+            <img src="https://picsum.photos/id/1039/400" alt="picture of water water and green scenery">
+            <figcaption>Lorem ipsum dolor sit amet</figcaption>
+        </figure>
+        <button>click me</button>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil libero consequatur saepe obcaecati, at ullam optio cumque voluptatum distinctio tenetur unde, est, laborum odit cupiditate quisquam quasi nulla? Nostrum mollitia blanditiis hic ab, accusamus aliquam neque totam, incidunt ratione distinctio, amet sapiente culpa dolor! Dolorem animi molestias ipsum officiis quae non maxime veritatis iste. Possimus maiores quod quibusdam eveniet. Temporibus sed corrupti nesciunt expedita qui quae est excepturi iste. Placeat qui corporis, beatae alias expedita architecto aspernatur dolorem officia, deserunt laboriosam, eveniet saepe omnis excepturi reprehenderit quia animi! Voluptas deserunt ullam magni consectetur labore suscipit, odit quis ut vero exercitationem dolorum. Atque dolores incidunt fugit voluptas, earum cupiditate vitae laborum ex quos doloremque dignissimos iure sunt reprehenderit cumque corporis dolorem alias aut corrupti similique esse autem necessitatibus repudiandae possimus sed? Earum ipsum ad voluptate deleniti, magni repudiandae voluptatem fugit odio, esse tempora consequatur cupiditate dicta sunt in nihil doloribus cumque laudantium facere reiciendis suscipit? Facilis, ducimus aspernatur! Reiciendis aliquid veniam optio quos ea tempora vel voluptatum, perspiciatis commodi cum nemo ullam esse ducimus expedita ex dolor possimus rem, doloremque veritatis voluptatibus atque eum enim fugiat repellat. Repudiandae obcaecati mollitia provident incidunt rerum, voluptates debitis accusamus voluptate nobis rem corporis fuga?</p>
+    </section>
+
+</body>
 </html>
