--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/styles.min.css">
+    <style>
+        .fa-html5 {
+            color: purple; 
+        }
+        .icon {
+            font-size: 10em;
+        }
+    </style>
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1>CDN - or content delivery network</h1>
+    <!-- <i class="fa-brands fa-html5 fa-10x fa-fade"></i>
+    <i class="fa-solid fa-house fa-7x"></i> -->
 
-    <iframe width="100%" height="1000" src="https://www.enatel.net" frameborder="0"></iframe>
-
-    <!-- <iframe width="800" height="500" src="https://www.openstreetmap.org/export/embed.html?bbox=172.60491371154788%2C-43.54584194571407%2C172.65177726745608%2C-43.511771203238055&amp;layer=mapnik&amp;marker=-43.528793422737536%2C172.6283884048462" style="border: 1px solid black"></iframe> -->
-
-    <!-- <iframe width="860" height="515" src="https://www.youtube.com/embed/LGQuIIv2RVA?si=wNOPSMDF_lVOFfXb"></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/iGSYfhz8RNA?si=Or35NKmwfcumiKMD"></iframe> -->
+    <i class="icon bi bi-airplane"></i>
+    
 </body>
 </html>
